<resources>
    <string name="app_name">Smart Switch Board</string>
    <string name="config_wifi">Config Wifi</string>
    <string name="switch_icon">Switch Icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="logo">Logo</string>
    <string name="don_t_have_an_account_n_sign_up_here">Don\'t have an account?\n Register Here</string>
    <string name="already_have_an_account_n_login_here">Already have an account?\n Login here</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="email_cant_empty">Email can\'t be empty</string>
    <string name="enter_valid_email">Enter Valid E-mail</string>
    <string name="password_cant_empty">Password can\'t be empty</string>
    <string name="password_lenght_error">Password must contain at-least 6 characters</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="enter_valid_number">Enter valid phone number</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login_with_phone_number">Login with phone number</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="verify">Verify</string>
    <string name="new_connection">New Connection</string>
    <string name="share_code">ShareCode</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="log_out">Log out</string>
    <string name="misc">Misc</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Setting Preferences -->
    <string name="account">Account</string>
    <string name="themes">Themes</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="change_password">Change Password</string>
    <string name="auto_update_check">Auto Update Check</string>
    <string name="check_updates_automatically">Turn on to check updates automatically</string>
    <string name="notifies_new_update">Notifies when new updates are available</string>
    <string name="about_us">About Us</string>
    <string name="contact_support">Contact Support</string>
    <string name="delete_account">Delete Account</string>
    <string name="report">Report</string>
    <string name="report_bug">Report Bug</string>
    <string name="share_our_work">Share our work</string>
    <string name="enter_password_to_continue">Enter Password to continue</string>
    <string name="enter_e_mail_to_continue">Enter e-mail to continue</string>
    <string name="try_another_way">Try another way</string>
    <string name="enter_phone_number_to_continue">Enter Phone number to continue</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change">Change</string>
    <string name="switch_">Switch</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="not_connected_to_ssb">Not connected to any SSB</string>
    <string name="enter_valid_otp">Enter valid otp</string>
    <string name="describe_your_problem_bug">Describe your problem/bug.\nSteps to reproduce the bug</string>
    <string name="add_screenshots_optional">Add Screenshots (optional)</string>
    <string name="contact_us_via">Contact us via</string>
    <string name="support_mail">yash8hajare@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="support_phone">8291881038</string>
    <string name="menu">menu</string>
    <string name="please_connect_to_wifi_network">Please connect to WiFi network</string>
    <string name="wifi_name_ssid_ssb">WiFi name (SSID) : SSB</string>
    <string name="password_87654321">Password : 87654321</string>
    <string name="textview">TextView</string>
    <string name="enter_password_here">Enter password here</string>
    <string name="do_you_have_wi_fi_router">Do you have Wi-Fi router?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="share_via_message">Share via Message</string>
    <string name="select_option">Select option:</string>
    <string name="scan_qr_code">Scan QR code:</string>
    <string name="follow_steps_use_sharecode_tap_on_scan_qr_scan_below_qr"><![CDATA[Follow steps: \'Use ShareCode\' > tap on \'Scan QR\' > Scan below QR]]></string>
    <string name="copy_paste">Copy/Paste</string>
    <string name="enter_share_code">Enter share code:</string>
    <string name="paste_here">Paste here!</string>
    <string name="change_title">Change Title:</string>
    <string name="type_here">Type here!</string>
    <string name="confirmation">Confirmation</string>
    <string name="really_want_to_log_out">Do you really want to Log out ?</string>
    <string name="restart_app">Restart Application to apply changes</string>
    <string name="you_id_is_connected_to_some_ssb">Your id is connected to some another SSB</string>
    <string name="sync">Sync</string>
    <string name="ignore">Ignore</string>
    <string name="sync_summary">Sync your previous SSB data. Existing data will be replaced/deleted</string>
    <string name="please_wait">Please Wait</string>
    <string name="deleted">Deleted</string>
    <string name="title_changed">Title changed successfully!</string>
    <string name="enter_valid_text">Please enter valid text</string>
    <string name="select_switches">Select Switches:</string>
    <string name="please_select_switches">Please select switches!</string>
    <string name="response_will_be_sent_once_interenet">Response will automatically send once internet connectivity is established</string>
    <string name="no_interent">No internet connectivity available</string>
    <string name="this_feature_will_available_soon">This Feature will be available soon.</string>
    <string name="make_sure_smart_switch_powered_up">Make sure \'Smart Switch Board\' is powered up!</string>
    <string name="auto_detect_not_supported">Auto-detect is not supported in this android version.</string>
    <string name="open_wifi_settings">Open WiFi settings</string>
    <string name="this_version_no_supports_auto_scan">This Android version supports Auto-Scan!</string>
    <string name="power_up_ssb_auto_detects">Power up Smart Swtich Board! \n \'Auto-Scan\': Automatically detects and connects to available Smart Switch Board.</string>
    <string name="auto_scan">Auto-Scan</string>
    <string name="cancel">Cancel</string>
    <string name="manual_mode">Manual mode</string>
    <string name="error_getting_mobile_data_state">Error getting mobile data state</string>
    <string name="please_turn_on_location">Please Turn on Location.</string>
    <string name="please_turn_on_wifi">Please Turn on Wi-Fi.</string>
    <string name="please_disable_mobile_data">Attention! Please Disable Mobile Data</string>
    <string name="mobile_data_should_be_disabled_details">In order to Connect to Smart Switch Board, your \'mobile data\' must be disabled.</string>
    <string name="select_your_wifi">Select your Wi-Fi:</string>
    <string name="scan_wifi">Scan Wi-Fi</string>
    <string name="ok">OK</string>
    <string name="enter_wifi_credentials">Enter WiFi credentials:</string>
    <string name="ssb_is_configured_already">This Smart Switch Board is already configured.</string>
    <string name="app_url">https://smart.switch.board/</string>
    <string name="enter_valid_sharecode">Please enter valid ShareCode</string>
    <string name="new_connection_received">New Connection Received!</string>
    <string name="already_added">Already added!</string>
    <string name="share">Share</string>
    <string name="please_scan_valid_qr">Please Scan valid QR code</string>
    <string name="password_changed_recently_warning">Your password has been changed recently, re-login to continue</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="press_again_to_exit">Press Again to Exit</string>
    <string name="invalid_link">Invalid link!</string>
    <string name="unable_to_sync_old_data">Unable to Sync Your Old Data</string>
    <string name="git_repo_name">Smart_Switch_Board</string>
    <string name="git_username">GauthamAsir</string>
    <string name="please_disconnect_ssb">Please Disconnect \'SSB\'</string>
    <string name="connected_successfully">Connected Successfully!</string>
    <string name="failed_to_delete_account">Failed to delete account</string>
    <string name="acount_deleted">Account Deleted</string>
    <string name="verifying_password">Verifying Password</string>
    <string name="deleting_account">Deleting Account</string>
    <string name="sync_successful">Sync Successful, Sometimes it requires restart to apply changes</string>
    <string name="bin">Bin</string>
    <string name="nothing_deleted_yet">Nothing is Deleted yet!</string>
    <string name="restore_now">Restore Now</string>
    <string name="delete_forever">Delete Forever</string>
    <string name="manage_devices">Manage Devices</string>
    <string name="device_name">Device Name</string>
    <string name="last_login">Last Login</string>
    <string name="details">Details</string>
    <string name="no_devices_found">No Devices Found</string>
    <string name="logged_out_for_security_reasons">Logged Out for security reasons</string>
    <string name="current_device">Current Device</string>
    <string name="device_ip">Device Ip</string>
    <string name="device_location">Device Location</string>
    <string name="sdk_version">Sdk Version</string>
    <string name="sign_out">Sign Out</string>
    <string name="attach_log_file">Attach Log file</string>
</resources>