<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_round_settings_24"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_recycle_bin"
            android:icon="@drawable/ic_round_delete_outline_white"
            android:title="@string/bin" />

    </group>


    <item android:title="@string/misc">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>