<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_12dp">

    <TextView
        android:id="@+id/text_view_for_name_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/_6dp"
        android:text="@string/select_option"
        android:textAppearance="?android:textAppearanceLarge" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_12dp" />

    <Button
        android:id="@+id/generate_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_qr_code"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/share_via_mssg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_via_message"
        android:textColor="@android:color/white" />

</LinearLayout>
