<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/text_view_for_name_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/_6dp"
            android:text="@string/select_option"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="?android:textColorPrimary" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_12dp" />

    <Button
        android:id="@+id/scan_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/copy_paste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copy_paste"
        android:textColor="@android:color/white" />

</LinearLayout>
