<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us_via"
        android:textAppearance="?android:textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/email_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginTop="@dimen/_12dp"
        android:background="?selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/email"
            android:padding="@dimen/_12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_outline_email_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/support_mail"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginTop="@dimen/_12dp"
        android:layout_marginBottom="@dimen/_6dp"
        android:background="?selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/email"
            android:padding="@dimen/_12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_round_phone_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/phone"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/support_phone"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>