<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/old_pass_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginTop="@dimen/_12dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:gravity="start"
            android:padding="@dimen/_12dp"
            android:text="@string/enter_password_to_continue"
            android:textAppearance="?android:textAppearanceLarge" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldPass"
            style="@style/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginTop="@dimen/_12dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:layout_marginBottom="@dimen/_12dp"
            android:hint="@string/old_password"
            android:nextFocusDown="@id/next_old_pass"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/editTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next_old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:layout_marginBottom="@dimen/_12dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/try_another_way"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:layout_marginBottom="@dimen/_12dp"
            android:text="@string/try_another_way"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_pass_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginTop="@dimen/_12dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:gravity="start"
            android:padding="@dimen/_12dp"
            android:text="@string/enter_new_password"
            android:textAppearance="?android:textAppearanceLarge" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPass"
            style="@style/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginTop="@dimen/_12dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:layout_marginBottom="@dimen/_12dp"
            android:hint="@string/new_password"
            android:nextFocusDown="@id/changePassBt"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/editTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/changePassBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:layout_marginBottom="@dimen/_12dp"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginTop="@dimen/_12dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:gravity="start"
            android:padding="@dimen/_12dp"
            android:text="@string/enter_phone_number_to_continue"
            android:textAppearance="?android:textAppearanceLarge" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneInputDialog"
            style="@style/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginTop="@dimen/_12dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:layout_marginBottom="@dimen/_12dp"
            android:hint="@string/phone_number"
            android:nextFocusDown="@id/login_phone_dialog"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/editTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:drawableEnd="@drawable/ic_round_phone_24"
                android:focusable="true"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:nextFocusDown="@id/login_phone_dialog" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_phone"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24dp"
                android:layout_marginEnd="@dimen/_12dp"
                android:layout_marginBottom="@dimen/_12dp"
                android:layout_weight="1"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="?android:textColorPrimary" />

            <Button
                android:id="@+id/next_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12dp"
                android:layout_marginEnd="@dimen/_24dp"
                android:layout_marginBottom="@dimen/_12dp"
                android:layout_weight="1"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/otp_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_24dp"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/optView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:gravity="center"
            android:hint="@string/enter_otp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number" />

        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp"
            android:text="@string/verify"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:padding="@dimen/_24dp"
            android:src="@drawable/heart_rate" />

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_6dp"
            android:textAppearance="?android:textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>