<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12dp"
    android:elevation="@dimen/_12dp"
    app:cardCornerRadius="@dimen/_6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_12dp">

        <TextView
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_name" />

        <TextView
            android:id="@+id/device_name"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_12dp" />

        <TextView
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_login" />

        <TextView
            android:id="@+id/last_login"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_login" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/details"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/details"
                android:textAppearance="?attr/textAppearanceButton"
                android:textColor="?android:textColorPrimary"
                app:elevation="0dp"
                app:strokeColor="@android:color/darker_gray" />

            <Space
                android:layout_width="@dimen/_24dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/log_out"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/log_out"
                android:textAppearance="?attr/textAppearanceButton"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>